# takuan

./: .gitignore  Dockerfile  README.md  dev.Dockerfile  dev.jupyter.Dockerfile  dev_db_password.txt  docker-compose.dev.yaml  docker-compose.secrets.dev.yaml  docker-compose.test.yaml  docker-compose.yaml  entrypoint.bash  gosu_entrypoint.bash  local-tests.bash  pyproject.toml  run.bash  run.dev.bash  test-docker.bash
.github/workflows/: build.yml  lint.yml  openapi.yml  test.yml
authz_plugins/api_key/: README.md  authz.module.py  example.env
authz_plugins/bento/: README.md  authz.module.py  example.env
authz_plugins/opa/: README.md  authz.module.py  example.env
docs/: authz.md
etc/: bento.authz.module.py  example.authz.module.py
etc/authz-api-key-extra-env/: authz.module.py
etc/authz-extra-dep/: authz.module.py
etc/example-dep/: extra-dep.authz.module.py  requirements.txt
examples/: ingest_demo.py  ingestion.md  my-sample-example.tsv
jupyter_notebooks/: test_notebook.ipynb
jupyter_notebooks/utils/: generate_dataset.py
tests/: conftest.py  test_authz_plugin.py  test_base_authz_middleware.py  test_db.py  test_experiments.py  test_expressions.py  test_ingest.py  test_service_info.py
tests/data/: counts_matrix_group_2.csv  counts_matrix_group_3.csv  gene_lengths.csv  rcm_file.csv  rcm_file_bad_column.csv  rcm_file_bad_values.csv  rcm_file_duplicates.csv  service-info.json  single_sample.csv  single_sample_detailed.csv  single_sample_tpm.tsv  single_sample_tpm_fpkm.tsv  single_sample_tpm_fpkm_2.tsv
transcriptomics_data_service/: config.py  constants.py  db.py  exceptions.py  export-openapi.py  ingestion.py  main.py  models.py  normalization_utils.py  service_info.py
transcriptomics_data_service/authz/: middleware_base.py  middleware_mixin.py  plugin.py
transcriptomics_data_service/routers/: experiment_results.py  expressions.py  ingest.py  normalization.py  query.py
transcriptomics_data_service/scripts/: normalize.py
transcriptomics_data_service/sql/: migrate_v1_0_0.sql  schema.sql
