[tool.poetry]
name = "transcriptomics-data-service"
version = "0.1.0"
description = ""
authors = ["Victor Rocheleau <victor.rocheleau@mcgill.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12.0,<3.14"
fastapi = {extras = ["all"], version = "^0.119.1"}
pydantic = "^2.6.1"
bento-lib = {extras = ["fastapi"], version = "^14.0.0"}
jsonschema = "^4.21.1"
pydantic-settings = "^2.1.0"
asyncpg = "^0.30.0"
pandas = "^2.2.3"
joblib = "^1.4.2"

[tool.poetry.group.dev.dependencies]
aioresponses = "^0.7.6"
coverage = "^7.11.0"
debugpy = "^1.8.17"
httpx = "^0.27.0"
pytest = "^8.4.2"
pytest-asyncio = "^0.23.5"
pytest-cov = "^7.0.0"
tox = "^4.31.0"
fasta-checksum-utils = "^0.5.0"
ruff = "^0.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Linting and formating using Ruff
[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = ["transcriptomics_data_service/export-openapi.py"]
